feat(langchain4j): introduce new class LC4jToolMapBuilder to build a map of ToolSpecifications and ToolExecutors
- Refactor LC4jToolService
- Refactor ToolNode
- Deprecate the older `Specification` record in favor of the more versatile and flexible map-based approach.